--- a/Android/Lead/app/src/main/res/menu/menu_picture.xml
+++ b/Android/Lead/app/src/main/res/menu/menu_picture.xml
@@ -1,9 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <!--<item android:id="@+id/action_example" android:title="@string/action_edit_journal"
-        app:showAsAction="withText|ifRoom" />
-        -->
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.orbital.lead.controller.Activity.PictureActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
