--- a/Android/Lead/app/src/main/res/menu/menu_specific_journal.xml
+++ b/Android/Lead/app/src/main/res/menu/menu_specific_journal.xml
@@ -2,6 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.orbital.lead.controller.Activity.SpecificJournalActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_edit_journal" android:title="@string/action_edit_journal"
+        android:icon="@drawable/ic_edit"
+        app:showAsAction="always" android:orderInCategory="100"/>
+
+    <item android:id="@+id/action_publish_journal" android:title="@string/action_publish_journal"
+        app:showAsAction="always|withText" android:orderInCategory="200"/>
+    <!--android:icon="@drawable/ic_edit" -->
+
+    <item android:id="@+id/action_delete_journal" android:title="@string/action_delete"
+        android:orderInCategory="300" app:showAsAction="never" />
+
 </menu>
