--- a/Android/Lead/app/src/main/res/layout/recycler_list_row_user_journal_list_layout.xml
+++ b/Android/Lead/app/src/main/res/layout/recycler_list_row_user_journal_list_layout.xml
@@ -26,6 +26,7 @@
         android:layout_height="match_parent" >
 
         <RelativeLayout
+            android:id="@+id/text_area"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -46,7 +47,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentBottom="true"
-
                 style="@style/RecyclerViewJournalListSubTitleStyle"/>
 
         </RelativeLayout>
@@ -72,12 +72,12 @@
                 joooonho:sriv_border_color="#000000"
                 joooonho:sriv_oval="false" />
             -->
-            <ImageView
+            <com.orbital.lead.widget.FourThreeImageView
                 android:id="@+id/image_picture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="false"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop" />
 
             <include layout="@layout/progress_bar_layout" />
 
