--- a/Android/Lead/app/src/main/res/layout/activity_specific_journal_layout.xml
+++ b/Android/Lead/app/src/main/res/layout/activity_specific_journal_layout.xml
@@ -102,9 +102,6 @@
                             android:text="December 2015"
                             style="@style/SpecificJournalPage_Date_Month_Year_Style"/>
 
-
-
-
                     </RelativeLayout>
 
                 </LinearLayout>
@@ -126,38 +123,14 @@
 
                 </LinearLayout>
 
-                <!-- Journal Content -->
-                <LinearLayout
-                    android:id="@+id/content_journal_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/content_date"
-                    android:layout_alignLeft="@+id/content_date"
-                    android:layout_marginTop="8dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/text_journal_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        style="@style/SpecificJournalPage_Title_Style"/>
-
-                    <TextView
-                        android:id="@+id/text_journal_content"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        style="@style/SpecificJournalPage_Content_Style"/>
-
-                </LinearLayout>
 
                 <!-- Tags and Projects-->
                 <LinearLayout
                     android:id="@+id/content_misc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/content_journal_text"
-                    android:layout_alignLeft="@+id/content_journal_text"
+                    android:layout_below="@+id/content_date"
+                    android:layout_alignLeft="@+id/content_date"
                     android:layout_marginTop="8dp"
                     android:orientation="vertical">
 
@@ -207,6 +180,33 @@
                     </TableLayout>
 
                 </LinearLayout> <!-- End of Tags and Projects-->
+
+
+                <!-- Journal Content -->
+                <LinearLayout
+                    android:id="@+id/content_journal_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/content_misc"
+                    android:layout_alignLeft="@+id/content_misc"
+                    android:layout_marginTop="8dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/text_journal_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/SpecificJournalPage_Title_Style"/>
+
+                    <TextView
+                        android:id="@+id/text_journal_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        style="@style/SpecificJournalPage_Content_Style"/>
+
+                </LinearLayout>
+
 
             </RelativeLayout> <!-- Content after viewanimator-->
 
