--- a/Android/Lead/app/src/main/res/layout/activity_edit_specific_journal.xml
+++ b/Android/Lead/app/src/main/res/layout/activity_edit_specific_journal.xml
@@ -1,121 +1,136 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.orbital.lead.controller.Activity.EditSpecificJournalActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <include layout="@layout/toolbar_specific_journal_layout" />
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/edit_text_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            style="@style/editTextTitleStyle"
-            android:text="this is a title"/>
+        <RelativeLayout android:layout_width="match_parent"
+            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            tools:context="com.orbital.lead.controller.Activity.EditSpecificJournalActivity">
 
-        <View
-            android:id="@+id/line_view"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:layout_alignLeft="@+id/edit_text_title"
-            android:layout_below="@+id/edit_text_title"
-            android:background="#77333333"
-            style="@style/lineStyle"/>
 
-        <!-- Journal date, hash tags, project -->
-        <TableLayout
-            android:id="@+id/table_tag_project"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/edit_text_title"
-            android:layout_below="@+id/line_view">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TableRow>
-
-                <ImageView
-                    android:id="@+id/icon_date"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_tag"/>
-
-                <TextView
-                    android:id="@+id/text_journal_date"
+                <EditText
+                    android:id="@+id/edit_text_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="8dp"
-                    style="@style/SpecificJournalPage_Content_Tag_Project_Style"
-                    android:text="21 Jun 2015"/>
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    style="@style/editTextTitleStyle"
+                    android:text="this is a title"/>
 
-            </TableRow>
+                <View
+                    android:id="@+id/line_view"
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignLeft="@+id/edit_text_title"
+                    android:layout_below="@+id/edit_text_title"
+                    android:background="#77333333"
+                    style="@style/lineStyle"/>
 
-            <TableRow android:layout_marginTop="8dp">
-
-                <ImageView
-                    android:id="@+id/icon_tag"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_tag"/>
-
-                <TextView
-                    android:id="@+id/text_journal_tag"
-                    android:layout_width="wrap_content"
+                <!-- Journal date, hash tags, project -->
+                <TableLayout
+                    android:id="@+id/table_tag_project"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="8dp"
-                    style="@style/SpecificJournalPage_Content_Tag_Project_Style"
-                    android:text="Tag 1, Tag 2, Tag 3"/>
+                    android:layout_alignLeft="@+id/edit_text_title"
+                    android:layout_below="@+id/line_view">
 
-            </TableRow>
+                    <TableRow>
 
-            <TableRow android:layout_marginTop="8dp">
+                        <ImageView
+                            android:id="@+id/icon_date"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@mipmap/ic_calendar"/>
 
-                <ImageView
-                    android:id="@+id/icon_project"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_project"/>
+                        <TextView
+                            android:id="@+id/text_journal_date"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="8dp"
+                            style="@style/SpecificJournalPage_Content_Tag_Project_Style"
+                            android:text="21 Jun 2015"/>
 
-                <TextView
-                    android:id="@+id/text_project"
-                    android:layout_width="wrap_content"
+                    </TableRow>
+
+                    <TableRow android:layout_marginTop="8dp">
+
+                        <ImageView
+                            android:id="@+id/icon_tag"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/ic_tag"/>
+
+                        <TextView
+                            android:id="@+id/text_journal_tag"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="8dp"
+                            style="@style/SpecificJournalPage_Content_Tag_Project_Style"
+                            android:text="Tag 1, Tag 2, Tag 3"/>
+
+                    </TableRow>
+
+                    <TableRow android:layout_marginTop="8dp">
+
+                        <ImageView
+                            android:id="@+id/icon_project"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:src="@drawable/ic_project"/>
+
+                        <TextView
+                            android:id="@+id/text_journal_project"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="8dp"
+                            style="@style/SpecificJournalPage_Content_Tag_Project_Style"
+                            android:text="Project 1"/>
+
+                    </TableRow>
+
+                </TableLayout>
+
+
+                <EditText
+                    android:id="@+id/edit_text_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="8dp"
-                    style="@style/SpecificJournalPage_Content_Tag_Project_Style"
-                    android:text="Project 1"/>
-
-            </TableRow>
-
-        </TableLayout>
-
-
-        <EditText
-            android:id="@+id/edit_text_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/table_tag_project"
-            android:layout_below="@+id/table_tag_project"
-            android:layout_marginTop="8dp"
-            style="@style/editTextContentStyle"
-            android:text="this is a content"/>
+                    android:layout_alignLeft="@+id/table_tag_project"
+                    android:layout_below="@+id/table_tag_project"
+                    android:layout_marginTop="8dp"
+                    style="@style/editTextContentStyle"
+                    android:text="@string/test_string"/>
 
 
 
 
 
-    </RelativeLayout>
+            </RelativeLayout>
 
 
 
 
-</RelativeLayout>
+        </RelativeLayout>
+
+    </ScrollView>
+
+</LinearLayout>
