--- a/Android/Lead/app/src/main/res/layout/activity_specific_journal_layout.xml
+++ b/Android/Lead/app/src/main/res/layout/activity_specific_journal_layout.xml
@@ -39,7 +39,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/black"
-                        android:src="@drawable/image_blank_picture_16_to_9" />
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_image_blank" />
 
                 </ViewAnimator>
                 
