--- a/Android/Lead/app/src/main/res/menu/menu_edit_specific_journal.xml
+++ b/Android/Lead/app/src/main/res/menu/menu_edit_specific_journal.xml
@@ -2,6 +2,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.orbital.lead.controller.Activity.EditSpecificJournalActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_done" android:title="@string/action_done"
+        android:icon="@drawable/ic_done"
+        android:orderInCategory="100" app:showAsAction="always" />
+
+    <item android:id="@+id/action_image" android:title="@string/action_image"
+        android:icon="@drawable/ic_image"
+        android:orderInCategory="200" app:showAsAction="always" />
+
+    <item android:id="@+id/action_detail" android:title="@string/action_detail"
+        android:icon="@drawable/ic_info"
+        android:orderInCategory="300" app:showAsAction="always" />
+
+    <item android:id="@+id/action_delete" android:title="@string/action_delete"
+        android:orderInCategory="400" app:showAsAction="never" />
 </menu>
