--- a/Android/Lead/app/src/main/res/layout/fragment_main_user_journal_list.xml
+++ b/Android/Lead/app/src/main/res/layout/fragment_main_user_journal_list.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        style="@style/RecyclerViewJournalListStyle" />
+        style="@style/RecyclerViewStyle" />
 
     <com.github.clans.fab.FloatingActionButton
         android:id="@+id/fragment_journal_list_fab"
