--- a/Android/Lead/app/src/main/res/layout/activity_picture.xml
+++ b/Android/Lead/app/src/main/res/layout/activity_picture.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <!-- include toolbar -->
+    <include layout="@layout/toolbar_specific_journal_pictures_layout" />
 
     <FrameLayout
         android:id="@+id/container_fragment"
