--- a/Android/Lead/app/src/main/res/layout/dialog_toolbar_delete.xml
+++ b/Android/Lead/app/src/main/res/layout/dialog_toolbar_delete.xml
@@ -2,30 +2,32 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tb="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/custom_toolbar"
-    android:layout_height="?attr/actionBarSize"
+    android:id="@+id/custom_specific_journal_toolbar"
+    android:layout_height="56dp"
     android:layout_width="match_parent"
-    android:minHeight="?attr/actionBarSize"
+    android:minHeight="56dp"
     android:background="?attr/colorPrimary"
-    tb:contentInsetLeft="72dp"
-    tb:contentInsetStart="72dp"
+    tb:contentInsetStart="16dp"
+    tb:contentInsetRight="16dp"
     tb:theme="@style/ToolbarTheme"
     tb:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/toolbar_text_title"
+            android:id="@+id/toolbar_text_title_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|center_vertical"
+            android:layout_alignParentLeft="true"
+            android:layout_gravity="center_vertical"
+            android:layout_centerVertical="true"
+            android:textSize="@dimen/text_actionbar_title"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_actionbar_title"/>
-        
+            android:text="@string/dialog_toolbar_add_new_tag"/>
 
-    </LinearLayout>
+    </RelativeLayout>
+
+
 </android.support.v7.widget.Toolbar>
