--- a/Android/Lead/app/src/main/res/layout/dialog_toolbar_project.xml
+++ b/Android/Lead/app/src/main/res/layout/dialog_toolbar_project.xml
@@ -28,6 +28,7 @@
             android:text="@string/dialog_toolbar_project_title"/>
 
         <ImageView
+            android:id="@+id/image_toolbar_add_new_project"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
