--- a/Android/Lead/app/src/main/res/layout/toolbar_specific_journal_layout.xml
+++ b/Android/Lead/app/src/main/res/layout/toolbar_specific_journal_layout.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
+            android:textColor="@color/white"
             android:textSize="@dimen/text_actionbar_title"/>
         
 
