--- a/Android/Lead/app/src/main/res/layout/toolbar_specific_journal_pictures_layout.xml
+++ b/Android/Lead/app/src/main/res/layout/toolbar_specific_journal_pictures_layout.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tb="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/custom_toolbar"
+    android:id="@+id/toolbar_specific_journal_pictures"
     android:layout_height="?attr/actionBarSize"
     android:layout_width="match_parent"
     android:minHeight="?attr/actionBarSize"
@@ -25,7 +25,7 @@
             android:layout_gravity="left|center_vertical"
             android:textColor="@color/white"
             android:textSize="@dimen/text_actionbar_title"/>
-        
 
     </LinearLayout>
+
 </android.support.v7.widget.Toolbar>
