--- a/Android/Lead/app/src/main/res/values/dimens.xml
+++ b/Android/Lead/app/src/main/res/values/dimens.xml
@@ -74,4 +74,7 @@
     <dimen name="drawer_user_image_width">72dp</dimen>
     <dimen name="drawer_user_image_height">72dp</dimen>
     <!-- <dimen name="drawer_user_image_margin_top">16dp</dimen>-->
+
+    <dimen name="grid_text_content_area_height">68dp</dimen>
+    <dimen name="grid_text_content_area_padding">16dp</dimen>
 </resources>
