--- a/Android/Lead/app/src/main/res/values/styles.xml
+++ b/Android/Lead/app/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionModeOverlay">true</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
@@ -18,6 +19,7 @@
         <item name="android:textColorPrimary">@color/toolbar_primary_text</item>
         <item name="actionMenuTextColor">@color/white</item>
         <item name="drawerArrowStyle">@style/MyDrawerArrowToggle</item>
+        <item name="colorControlNormal">@color/white</item>
     </style>
 
     <style name="MyDrawerArrowToggle" parent="Base.Widget.AppCompat.DrawerArrowToggle">
@@ -246,7 +248,6 @@
     <style name="lineStyle">
         <item name="android:layout_marginTop">@dimen/edit_text_margin_top</item>
         <item name="android:layout_marginBottom">@dimen/edit_text_margin_bottom </item>
-
     </style>
 
 
@@ -262,6 +263,19 @@
         <item name="android:textSize">@dimen/text_primary</item>
         <item name="android:textColor">@color/primary_text</item>
     </style>
+
+
+    <style name="gridAlbumContentAreaStyle">
+        <item name="android:padding">@dimen/grid_text_content_area_padding</item>
+    </style>
+
+    <style name="gridAlbumContentTextStyle">
+        <item name="android:textSize">@dimen/text_secondary</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
 
 
 
