--- a/Android/Lead/app/src/main/res/layout/activity_specific_journal_layout.xml
+++ b/Android/Lead/app/src/main/res/layout/activity_specific_journal_layout.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context="com.orbital.lead.controller.Activity.SpecificJournalActivity">
 
     <include layout="@layout/toolbar_specific_journal_layout" />
