--- a/Android/Lead/app/src/main/res/layout/dialog_viewpager_picture.xml
+++ b/Android/Lead/app/src/main/res/layout/dialog_viewpager_picture.xml
@@ -15,11 +15,19 @@
         style="@style/CustomDialogButtonArea">
 
         <Button
-            android:id="@+id/btnAlbumCover"
+            android:id="@+id/btnSetCover"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="@string/button_set_as_album_cover"
+            style="@style/AppCompat.Button.Flat"/>
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/btnSetCover"
+            android:text="@string/dialog_cancel"
             style="@style/AppCompat.Button.Flat"/>
 
     </RelativeLayout>
