--- a/Android/Lead/app/src/main/res/layout/progress_bar_layout.xml
+++ b/Android/Lead/app/src/main/res/layout/progress_bar_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<!--
 <ProgressBar
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/loading_spinner"
@@ -8,5 +8,14 @@
     android:layout_gravity="center_vertical|center_horizontal"
     android:indeterminate="true"
     style="?android:attr/progressBarStyle"/>
+-->
+
+<com.gc.materialdesign.views.ProgressBarCircularIndeterminate
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/loading_spinner"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
+    android:layout_gravity="center_vertical|center_horizontal"
+    android:background="@color/primary" />
 
 
