--- a/Android/Lead/app/src/main/res/layout/fragment_profile.xml
+++ b/Android/Lead/app/src/main/res/layout/fragment_profile.xml
@@ -3,26 +3,25 @@
     android:layout_height="match_parent"
     tools:context="com.orbital.lead.controller.Fragment.FragmentProfile"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
-
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical">
 
-        <!-- Dummy item to prevent EditText from receiving focus -->
-        <LinearLayout
-            android:focusable="true" android:focusableInTouchMode="true"
-            android:layout_width="0px" android:layout_height="0px"/>
-
         <RelativeLayout
             android:id="@+id/topArea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:paddingBottom="16dp">
+            android:paddingTop="16dp"
+            android:paddingBottom="24dp"
+            android:background="@color/background_lighter_grey">
+
+            <!-- Dummy item to prevent EditText from receiving focus -->
+            <LinearLayout
+                android:focusable="true" android:focusableInTouchMode="true"
+                android:layout_width="0px" android:layout_height="0px"/>
 
             <LinearLayout
                 android:id="@+id/user_profile_image_bind_layout"
@@ -58,6 +57,7 @@
             android:id="@+id/bottomArea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="vertical"
             style="@style/profileRowLayout">
 
@@ -161,7 +161,7 @@
                         android:id="@+id/editTextContact"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Email"
+                        android:hint="Contact"
                         android:nextFocusUp="@+id/editTextEmail"
                         android:nextFocusDown="@+id/textBirthday"
                         style="@style/profileEditTextStyle"/>
@@ -224,39 +224,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/textBirthday"
-                            android:hint="Street"
+                            android:hint="Address"
                             android:nextFocusUp="@+id/textBirthday"
                             android:nextFocusDown="@+id/editTextCountry"
                             style="@style/profileEditTextStyle"/>
 
-
-                        <EditText
-                            android:id="@+id/editTextCountry"
+                        <TextView
+                            android:id="@+id/textCountry"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/editTextAddress"
                             android:hint="Country"
                             android:nextFocusUp="@+id/editTextAddress"
                             android:nextFocusDown="@+id/editTextState"
-                            style="@style/profileEditTextStyle"/>
-
-                        <EditText
-                            android:id="@+id/editTextState"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/editTextCountry"
-                            android:hint="State"
-                            android:nextFocusUp="@+id/editTextCountry"
-                            android:nextFocusDown="@+id/editTextState"
-                            style="@style/profileEditTextStyle"/>
-
-                        <EditText
-                            android:id="@+id/editTextCity"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/editTextState"
-                            android:hint="City"
-                            android:nextFocusUp="@+id/editTextState"
                             style="@style/profileEditTextStyle"/>
 
                     </LinearLayout>
