--- a/Android/Lead/app/src/main/res/menu/menu_profile.xml
+++ b/Android/Lead/app/src/main/res/menu/menu_profile.xml
@@ -2,6 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.orbital.lead.controller.Activity.ProfileActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_done" android:title="@string/action_done"
+        android:icon="@drawable/ic_done"
+        android:orderInCategory="100" app:showAsAction="always" />
+
 </menu>
